--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -2,12 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "CommonJS",
-    "moduleResolution": "Node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "rootDir": "src",
     "outDir": "dist",
-    "rootDir": "src"
+    "esModuleInterop": true
   },
   "include": ["src"]
 }
